--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <footer class="rodape">
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
+  <script src="./app/main.js"></script>
+  <script src="./app/metodoFilter.js"></script>
   <script src="./app/metodoForEach.js"></script>
   <script src="./app/metodoMap.js"></script>
 </body>
